# clisops

./: .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _roocs-utils.HISTORY.rst  cli.py  environment.yml  exceptions.py  notebooks  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_upstream.txt  roocs.ini  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/disabled/: tag-testpypi-staging.yml
.github/workflows/: auto-accept-ci-changes.yml  cache_cleaner.yml  first_pull_request.yml  main.yml  prepare-release.yml  publish-pypi-production.yml  tag-testpypi-staging.yml  upstream.yml
CI/: preload_test_data.py  requirements_ci.in  requirements_ci.txt
binder/: apt.txt  environment.yml  postBuild
clisops/: __init__.py  __version__.py  api.py  cli.py  clisops.py  config.py  exceptions.py  project_utils.py  utils.py
clisops/core/: __init__.py  average.py  regrid.py  subset.py
clisops/etc/: logging.conf  roocs.ini
clisops/ops/: __init__.py  average.py  base_operation.py  regrid.py  subset.py
clisops/parameter/: __init__.py  _utils.py  area_parameter.py  base_parameter.py  collection_parameter.py  dimension_parameter.py  level_parameter.py  param_utils.py  parameterise.py  time_components_parameter.py  time_parameter.py
clisops/utils/: __init__.py  common.py  dataset_utils.py  file_namers.py  file_utils.py  get_coords.py  get_data.py  map_args.py  mini-esgf-data_registry.txt  output_utils.py  testing.py  time_utils.py  tutorial.py
clisops/xarray_utils/: xarray_utils.py
core/: __init__.py
docs/: Makefile  api.rst  conf.py  configuration.rst  environment.yml  index.rst  installation.rst  make.bat  readme.rst  usage.rst
docs/notebooks/: average_over_dims.ipynb  core_subset.ipynb  environment.yml  index.rst  issue-308-fillvalue.ipynb  regrid.ipynb  subset.ipynb  subset_kerchunk.ipynb
docs/notebooks/issues/: issue-308-fillvalue.ipynb
etc/: logging.conf
notebooks/: average_over_dims.ipynb  core_subset.ipynb  index.rst  ops_subset.ipynb  output_001.nc  regrid.ipynb  subset.ipynb
notebooks/cmip6/: o3_Amon_GFDL-ESM4_historical_r1i1p1f1_gr1_185001-194912.nc  o3_Amon_GFDL-ESM4_historical_r1i1p1f1_gr1_185001-194912.nc.md5
notebooks/tas/: tas_Amon_HadGEM2-ES_rcp85_r1i1p1_200512-203011.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_203012-205511.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_205512-208011.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_208012-209912.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_209912-212411.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_212412-214911.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_214912-217411.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_217412-219911.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_219912-222411.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_222412-224911.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_224912-227411.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_227412-229911.nc  tas_Amon_HadGEM2-ES_rcp85_r1i1p1_229912-229912.nc
ops/: __init__.py
tests/: _common.py  conftest.py  test_chunking_memory.py  test_clisops.py  test_clisops_main_var.py  test_config.py  test_core_average.py  test_core_regrid.py  test_core_subset.py  test_dataset_roll.py  test_dataset_utils.py  test_file_namers.py  test_logging.py  test_ops_average.py  test_ops_regrid.py  test_ops_subset.py  test_ops_subset_cordex.py  test_ops_xarray_mean.py  test_output_utils.py  test_project_utils.py  test_roll.py  test_subset.py  test_utils.py
tests/core/: test_average.py  test_regrid.py  test_subset.py
tests/dummy_data_utils/: post_processors.py  pre_processors.py
tests/ops/: test_average.py  test_regrid.py  test_subset.py  test_subset_cordex.py  test_xarray_mean.py
tests/test_fixes/: cmip5.output1.INM.inmcm4.rcp45.mon.ocean.Omon.r1i1p1.latest.zostoga.json  cmip5.output1.MOHC.HadGEM2-ES.historical.mon.land.Lmon.r1i1p1.latest.rh.json  cmip5.output1.MOHC.HadGEM2-ES.rcp85.mon.atmos.Amon.r1i1p1.latest.tas.json
tests/test_operations/: test_subset.py
tests/test_parameters/: test_area_parameter.py  test_collection_parameter.py  test_dimension_parameter.py  test_level_parameter.py  test_time_components_parameter.py  test_time_parameter.py
tests/test_utils/: test_common.py  test_dataset_utils.py  test_file_utils.py  test_output_utils.py  test_time_utils.py
utils/: file_namers.py
