[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clisops"
authors = [
  {name = "Elle Smith", email = "eleanor.smith@stfc.ac.uk"},
  {name = "Ag Stephens", email = "ag.stephens@stfc.ac.uk"},
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
maintainers = [
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8.0"
keywords = ["clisops", "xarray", "climate", "gis", "subsetting", "operations"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Systems Administration :: Authentication/Directory",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "bottleneck>=1.3.1",
  # cf-xarray is differently named on conda-forge
  "cf-xarray>=0.8.6;python_version>='3.9'",
  "cf-xarray>=0.7.5,<=0.8.0;python_version=='3.8'",
  "cftime>=1.4.1",
  "dask[complete]>=2.6",
  "geopandas>=0.11",
  "loguru>=0.5.3",
  "netCDF4>=1.4",
  "numpy>=1.16",
  "packaging",
  "pandas>=1.0.3",
  "platformdirs>=4.0",
  "pooch",
  "pyproj>=3.3.0",
  "requests>=2.0",
  # roocs_grids is differently named on conda-forge
  "roocs_grids>=0.1.2",
  "roocs-utils>=0.6.7,<0.7",
  "shapely>=1.9",
  "xarray>=0.21"
]

[project.optional-dependencies]
dev = [
  # Packaging
  "flit",
  # Dev tools and testing
  "black>=24.2.0",
  "bump-my-version>=0.17.1",
  "flake8",
  "gitpython>=3.1.30",
  "ipython",
  "isort",
  "jinja2>=2.11",
  "pre-commit>=3.0.0",
  "pytest",
  "pytest-cov",
  "pytest-loguru>=0.3.0",
  "tox>=4.0",
  "watchdog"
]
docs = [
  "ipykernel",
  "ipython",
  "ipython_genutils",
  "jupyter_client",
  "matplotlib",
  "nbconvert",
  "nbsphinx",
  "sphinx",
  "sphinx-rtd-theme>=1.0"
]
extra = [
  "xesmf>=0.8.2",
  # See: https://github.com/pydata/xarray/issues/7794
  "xarray>=0.21.0,<2023.03.0"
]

[project.urls]
"Homepage" = "https://clisops.readthedocs.io/"
"Source" = "https://github.com/roocs/clisops/"
"Changelog" = "https://clisops.readthedocs.io/en/latest/history.html"
"Issue tracker" = "https://github.com/roocs/clisops/issues"
"About ROOCS" = "https://roocs.github.io/"

[tool]

[tool.black]
target-version = [
  "py38",
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.13.0"
commit = true
tag = true
allow_dirty = false

[[tool.bumpversion.files]]
filename = "clisops/__version__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.codespell]
ignore-words-list = "scrip,nam,te,mye,bu,lik,tread"

[tool.coverage.run]
relative_files = true
include = ["clisops/*"]
omit = ["*/tests/*.py"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "CHANGES.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "clisops/**/*.py",
  "clisops/etc/roocs.ini",
  "docs/**/*.rst",
  "docs/Makefile",
  "docs/_static/roocs.png",
  "docs/conf.py",
  "docs/make.bat",
  "docs/notebooks/*.ipynb",
  "requirements_upstream.txt",
  "setup.cfg",
  "tests/*.py",
  "tests/data/*.json",
  "tests/data/*.nc",
  "tox.ini"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
  "docs/_build",
  "docs/clisops*.rst",
  "docs/modules.rst",
  "docs/notebooks/.ipynb_checkpoints",
  "environment.yml",
  "notebooks"
]

[tool.isort]
profile = "black"
py_version = 38
append_only = true
known_first_party = "clisops,_common"
skip = ["clisops/core/__init__.py"]

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes"
]
filterwarnings = ["ignore::UserWarning"]
markers = [
  "online: mark test to need internet connection",
  "slow: mark test to be slow"
]
