[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clisops"
authors = [
  {name = "Elle Smith", email = "eleanor.smith@stfc.ac.uk"},
  {name = "Ag Stephens", email = "ag.stephens@stfc.ac.uk"},
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
maintainers = [
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9.0"
keywords = ["clisops", "xarray", "climate", "gis", "subsetting", "operations"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12", # Compatibility issues will persist until https://github.com/pydata/xarray/issues/7794 is resolved
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "aiohttp", # Needed for HTTPFileSystem
  "bottleneck >=1.3.1",
  "cartopy >=0.23",
  # cf-xarray is differently named on conda-forge
  "cf-xarray >=0.8.6",
  "cftime >=1.4.1",
  "dask[complete] >=2023.6.0",
  "filelock >=3.15.4",
  "fsspec >=2023.9.0",
  "geopandas >=0.14.0",
  "jinja2 >=2.11",
  "loguru >=0.5.3",
  "numpy >=1.23.0,<2.1",
  "packaging >=23.2",
  "pandas >=1.5.0",
  "platformdirs >=4.0",
  "pooch >=1.8.0",
  "pyproj >=3.3.0",
  "requests", # Needed for HTTPFileSystem
  # roocs_grids is differently named on conda-forge
  "roocs_grids >=0.1.2",
  "scipy>=1.9.0",
  "shapely >=1.9",
  "xarray >=2022.9.0",
  "zarr"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "black >=24.8.0",
  "bump-my-version >=0.18.3",
  "coverage[toml] >=7.5.0",
  "deptry >=0.20.0",
  "flake8 >=7.0.0",
  "isort >=5.13.2",
  "netCDF4 >=1.4",
  "pre-commit >=3.5.0",
  "pytest >=8.0.0",
  "pytest-cov >=5.0.0",
  "pytest-loguru >=0.3.0",
  "pytest-xdist[psutil] >=3.2",
  "tox >=4.18.0",
  "watchdog >=4.0.0"
]
docs = [
  "ipykernel",
  "ipython >=8.5.0",
  "ipython_genutils",
  "jupyter_client",
  "matplotlib >=3.6.0",
  "nbconvert >=7.14.0",
  "nbsphinx >=0.9.5",
  "psy-maps >=1.5.0",
  "sphinx >=7.0.0",
  "sphinx-rtd-theme >=1.0"
]
extras = [
  "xesmf >=0.8.2",
  # See: https://github.com/pydata/xarray/issues/7794
  "xarray >=2022.6.0,<2023.3.0"
]

[project.urls]
"Homepage" = "https://clisops.readthedocs.io/"
"Source" = "https://github.com/roocs/clisops/"
"Changelog" = "https://clisops.readthedocs.io/en/latest/history.html"
"Issue tracker" = "https://github.com/roocs/clisops/issues"
"About ROOCS" = "https://roocs.github.io/"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.15.0"
commit = true
tag = false
allow_dirty = false

[[tool.bumpversion.files]]
filename = "clisops/__version__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.codespell]
ignore-words-list = "scrip,nam,te,mye,bu,lik,tread,fo"

[tool.coverage.paths]
source = ["clisops", "*/site-packages/clisops/"]

[tool.coverage.run]
relative_files = true
omit = ["*/tests/*.py"]
source = ["clisops"]

[tool.deptry]
extend_exclude = ["docs"]
ignore_notebooks = true
pep621_dev_dependency_groups = ["dev", "docs", "extras"]

[tool.deptry.per_rule_ignores]
DEP002 = ["aiohttp", "bottleneck", "cartopy", "netcdf4", "requests", "zarr"]
DEP003 = ["clisops"] # should be removed when restructuring to src layout
DEP004 = ["xesmf"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "CHANGES.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "clisops/**/*.py",
  "clisops/etc/roocs.ini",
  "docs/**/*.rst",
  "docs/Makefile",
  "docs/_static/roocs.png",
  "docs/conf.py",
  "docs/make.bat",
  "docs/notebooks/*.ipynb",
  "requirements_upstream.txt",
  "roocs-utils.HISTORY.txt",
  "setup.cfg",
  "tests/*.py",
  "tests/data/*.json",
  "tests/data/*.nc",
  "tox.ini"
]
exclude = [
  "**/*.py[co]",
  "**/__pycache__",
  ".*",
  "docs/_build",
  "docs/clisops*.rst",
  "docs/modules.rst",
  "docs/notebooks/.ipynb_checkpoints",
  "environment.yml",
  "notebooks"
]

[tool.isort]
profile = "black"
py_version = 39
append_only = true
known_first_party = "clisops,_common"
skip = ["clisops/core/__init__.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--verbose",
  "--color=yes",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal",
  "--strict-config",
  "--strict-markers"
]
filterwarnings = ["ignore::UserWarning"]
markers = [
  "online: mark test to need internet connection",
  "slow: mark test to be slow",
  "thread_unsafe: mark test to be thread unsafe"
]
